# Practical-Machine-Learning-for-coders

./: 00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  README.md  activate  hello.py  math.py  myself_00.ipynb  pyproject.toml
data/transfomer/: test-text.txt
notebooks/aohon-chapter5/: tf-CNN.ipynb
notebooks/deep-learning-aohon/: chapter5-CNN.ipynb  chapter7-attention.ipynb
notebooks/popcornreading/: SGD.ipynb  batchlearning.ipynb
python/: test.py
scripts/: activate.sh
zakiyama_or_not/zakiyama japanese comedian/: 2b00e96b-fb4e-4ab1-b6a1-c33e8434dd2f.jpg:large
