[project]
name = "practical-machine-learning-for-coders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastai>=2.8.2",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
]
