[project]
name = "practical-machine-learning-for-coders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<=3.12.8"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastai>=2.8.2",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "pipeline>=0.1.0",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "tf-keras>=2.15.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.55.4",
]
